--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
         touch .env
         echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
         echo PORT=${{ secrets.PORT }} >> .env
-        echo MONGO_URI=${{ secrets.MONGO_URI }} >> .env
+        echo MONGO_URI=${{ secrets.MONGO }} >> .env
         echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
         cat .env
     - run: npm run build --if-present
