--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,4 @@ jobs:
         echo ${{ secrets.ENV }} | base64 --decode > .env
         cat .env
     - run: npm run build --if-present
+    - run: pm2 restart secondbrain-api
