--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
         touch .env
         echo ${{ secrets.ENV }} | base64 --decode > .env
         cat .env
-    - run: npm run build --if-present
+    - run: pm2 restart secondbrain-api
